packages/survey-core/src/default-theme/blocks/sd-panel.scss
@use "../variables.scss" as *;
@use "../typography-mixins.scss" as *;

.sd-panel {
  position: relative;
  padding-inline-start:  var(--sjs2-layout-component-panel-box-padding-horizontal, var(--sjs2-spacing-x000));
  padding-inline-end: var(--sjs2-layout-component-panel-box-padding-horizontal, var(--sjs2-spacing-x000));
  padding-top: var(--sjs2-layout-component-panel-box-padding-top, var(--sjs2-spacing-x000));
  padding-bottom: var(--sjs2-layout-component-panel-box-padding-bottom, var(--sjs2-spacing-x000));
  gap: var(--sjs2-layout-component-panel-box-gap-vertical, var(--sjs2-spacing-x000));
}

.sd-panel__header {
  padding: var(--sjs2-layout-component-panel-header-padding-vertical, var(--sjs2-spacing-x400)) var(--sjs2-layout-component-panel-header-padding-horizontal, var(--sjs2-layout-component-panel-content-area-padding-horizontal));
  gap: var(--sjs2-layout-component-panel-header-gap-vertical, var(--sjs2-spacing-x050));
}

.sd-panel__title {
  padding: var(--sjs2-layout-component-panel-title-padding-vertical, var(--sjs2-spacing-x000)) var(--sjs2-layout-component-panel-title-padding-horizontal, var(--sjs2-spacing-x000));
}

.sd-panel__description {
  padding-inline-start:  var(--sjs2-layout-component-panel-description-padding-horizontal, var(--sjs2-spacing-x000));
  padding-inline-end: var(--sjs2-layout-component-panel-description-padding-horizontal, var(--sjs2-spacing-x000));
  padding-top: var(--sjs2-layout-component-panel-description-padding-top, var(--sjs2-spacing-x000));
  padding-bottom: var(--sjs2-layout-component-panel-description-padding-bottom, var(--sjs2-spacing-x000));
}

.sd-panel__content {
  padding-inline-start:  var(--sjs2-layout-component-panel-content-area-padding-horizontal, var(--sjs2-spacing-x500));
  padding-inline-end: var(--sjs2-layout-component-panel-content-area-padding-horizontal, var(--sjs2-spacing-x500));
  padding-top: var(--sjs2-layout-component-panel-content-area-padding-vertical, var(--sjs2-spacing-x400));
  --animation-padding-top: var(--sjs2-layout-component-panel-content-area-padding-vertical, var(--sjs2-spacing-x400));
  padding-bottom: var(--sjs2-layout-component-panel-content-area-padding-vertical, var(--sjs2-spacing-x400));
  row-gap: var(--sjs2-layout-component-panel-content-area-gap-horizontal, var(--sjs2-spacing-x400));
  column-gap: var(--sjs2-layout-component-panel-content-area-gap-vertical, var(--sjs2-spacing-x500));
  display: flex;
  flex-direction: column;
}

.sd-panel.sd-panel--as-page {
  & > .sd-panel__header.sd-panel__header {
    padding-top: 0;
    padding-bottom: calc(0.5 * var(--sd-base-vertical-padding) + var(--sjs2-spacing-x100));

    &:after {
      content: none;
    }

    .sd-panel__title {
      @include sjs2--typography--component--page--title;
      position: static;
      margin: 0 0 var(--sjs2-spacing-x050) 0px;

      span {
        font-family: inherit;
        font-size: inherit;
        font-weight: inherit;
        color: inherit;
        line-height: inherit;
      }
    }

    .sd-element__num {
      padding: initial;
      margin: initial;
      float: initial;
      width: initial;
    }

    .sd-panel__description {
      @include sjs2--typography--component--page--description;
      position: static;
      margin: 0 0 var(--sjs2-spacing-x050) 0;
    }

    .sd-panel__required-text {
      display: none;
    }
  }

  & > .sd-panel__errbox {
    margin: 0 0 var(--sjs2-spacing-x200) 0;
    padding: calc(0.5 * var(--sd-base-vertical-padding) + var(--sjs2-spacing-x100)) var(--sd-base-padding);
  }

  & > .sd-panel__content {
    padding-top: 0;
  }
}

.sd-root--compact {
  .sd-panel__content {
    padding-top: var(--sjs2-spacing-x500);
    --animation-padding-top: var(--sjs2-spacing-x500);
    padding-bottom: var(--sjs2-spacing-x500);
    row-gap: var(--sjs2-spacing-x400);
  }

  .sd-panel--as-page {
    & > .sd-panel__errbox {
      margin: 0 0 var(--sd-base-vertical-padding) 0;
    }
  }
}

.sd-row ~ .sd-row {
  .sd-panel--as-page {
    padding-top: var(--sjs2-spacing-x400);
  }
}

.sd-panel__required-text {
  color: $red;
}

.sd-panel__footer {
  box-sizing: border-box;
  padding-left: calc(var(--sd-base-padding) + var(--sjs2-spacing-negative-x150) + var(--sjs2-spacing-negative-x025));
  margin-left: calc(-1 * var(--sd-base-padding));
  width: calc(100% + 2 * var(--sd-base-padding));
  margin-bottom: calc(-1 * var(--sd-base-padding) + 0.5 * var(--sd-base-vertical-padding));
  margin-top: calc(0.5 * var(--sd-base-vertical-padding));
  border-top: 1px solid $border-light;
  padding-top: calc(0.5 * var(--sd-base-vertical-padding));
}
.sd-panel--as-page .sd-panel__footer {
  padding: var(--sjs2-spacing-x400) 0 0;
  margin: 0;
  border: none;
  width: initial;
}
// .sd-panel__content {
//   padding-top: var(--sd-base-padding);
// }

.sd-panel.sd-element--nested {
  & > .sd-panel__content {
    padding-bottom: var(--sd-base-padding);
    --animation-padding-top: var(--sd-base-padding);
  }
}

// .sd-panel__content {
//   --animation-padding-top: var(--sd-base-padding);
// }

